objects/Customer_Transition_Dtls__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Error_Id__c</fullName>
        <label>AOPS_Error_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Flag__c</fullName>
        <externalId>true</externalId>
        <label>AOPS Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Sequence_ID__c</fullName>
        <formula>Account_ID__r.AOPS_Seq_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Sequence ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CONTACT_FIRST_NAME__c</fullName>
        <label>AP CONTACT FIRST NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CONTACT_LAST_NAME__c</fullName>
        <label>AP CONTACT LAST NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_CONTACT_TELEPHONE__c</fullName>
        <label>AP CONTACT TELEPHONE #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Extension_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Customer Transition Details</relationshipLabel>
        <relationshipName>Customer_Transition_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer_Transition_Dtls</relationshipLabel>
        <relationshipName>Customer_Transition_Dtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BO_Allowed_Cancel__c</fullName>
        <label>B/O Allowed / Cancel</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Order_Flag__c</fullName>
        <label>Back Order Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Customer Transition Details (Bill To Account Extension)</relationshipLabel>
        <relationshipName>Customer_Transition_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Transition Details (Bill To Account)</relationshipLabel>
        <relationshipName>Customer_Transition_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Reference__c</fullName>
        <label>Bill To Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Address1__c</fullName>
        <formula>Account_ID__r.Address1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Address2__c</fullName>
        <formula>Account_ID__r.Address2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Address2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_City__c</fullName>
        <formula>Account_ID__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Name__c</fullName>
        <formula>Account_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_RecordType__c</fullName>
        <formula>Account_ID__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_State__c</fullName>
        <formula>TEXT(Account_ID__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Zip__c</fullName>
        <formula>Account_ID__r.Zip_5digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Descr__c</fullName>
        <label>Cost Center Description</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_ID__c</fullName>
        <label>Cost Center ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_AR__c</fullName>
        <label>Credit Card</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Transition_ID__c</fullName>
        <label>Customer Transition ID</label>
        <referenceTo>Customer_Transition__c</referenceTo>
        <relationshipLabel>Customer Transition Details</relationshipLabel>
        <relationshipName>Customer_Transition_Dtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_assigned_location__c</fullName>
        <label>Customer assigned location</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dept_Addtl_Instructions__c</fullName>
        <description>Dept Addtl Instructions</description>
        <label>Dept Addtl Instructions</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Description__c</fullName>
        <description>Dept Description</description>
        <label>Dept Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Dollar_Limit__c</fullName>
        <description>Dept Dollar Limit</description>
        <label>Dept Dollar Limit</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dept_Key__c</fullName>
        <description>Dept Key</description>
        <label>Dept Key</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Ship__c</fullName>
        <label>Drop Ship</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Bill_Cycle__c</fullName>
        <label>EC Bill Cycle</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message_Level__c</fullName>
        <label>Error Message Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Account Setup Failure</fullName>
                </value>
                <value>
                    <fullName>Address Failure</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Failure</fullName>
                </value>
                <value>
                    <fullName>Cost Center Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message_Type__c</fullName>
        <label>Error Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Failure</fullName>
                </value>
                <value>
                    <fullName>Data Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_back_phone_number__c</fullName>
        <label>Fax back phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Final_Split__c</fullName>
        <formula>text(Customer_Transition_ID__r.Final_Split_Decision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Split</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Split_Record__c</fullName>
        <formula>Customer_Transition_ID__r.Account__r.Split_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Split Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIPAL_alternate_location_flag__c</fullName>
        <label>MIPAL alternate location flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Primary_Key__c</fullName>
        <description>OMX Primary Key for Consignee, Cost Center and PO</description>
        <externalId>true</externalId>
        <label>OMX Primary Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Acknowledgement_type__c</fullName>
        <label>Order Acknowledgement type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <formula>Account_ID__r.Sales_PersonID__r.User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Comment__c</fullName>
        <description>PO Comment</description>
        <inlineHelpText>PO Comment</inlineHelpText>
        <label>PO Comment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Expiration_Date__c</fullName>
        <description>PO Expiration Date</description>
        <inlineHelpText>PO Expiration Date</inlineHelpText>
        <label>PO Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_ID__c</fullName>
        <label>PO ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Limit__c</fullName>
        <label>PO Limit</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Description__c</fullName>
        <label>Payment Term Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Daily_Invoice__c</fullName>
        <label>Print Daily Invoice</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Catalog__c</fullName>
        <label>Promo – Catalog</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Email__c</fullName>
        <label>Promo – E-mail</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Flyer__c</fullName>
        <label>Promo – Flyer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Phone__c</fullName>
        <label>Promo – Phone</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Transition Details (Reference Account)</relationshipLabel>
        <relationshipName>Customer_Transition_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Extension_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Extension Account</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Customer Transition Details (Reference Extension Account)</relationshipLabel>
        <relationshipName>Customer_Transition_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOA_Response__c</fullName>
        <label>SOA Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_2_Bill_2_Code__c</fullName>
        <description>Code from OMX concerning if the record is a ship2, bill2</description>
        <inlineHelpText>Code from OMX concerning if the record is a ship2, bill2</inlineHelpText>
        <label>Ship 2 Bill 2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Driven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Record__c</fullName>
        <formula>if( Account_ID__r.Split_Record__c==true,&quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_Bill_Cycle__c</fullName>
        <label>Summary Bill Cycle</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Bill__c</fullName>
        <label>Summary Bill</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption__c</fullName>
        <label>Tax Exemption</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer Transition Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTD-{000000000}</displayFormat>
        <label>CTD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Transition Details</pluralLabel>
    <recordTypes>
        <fullName>Cost_Center</fullName>
        <active>true</active>
        <label>Cost Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <label>Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sites</fullName>
        <active>true</active>
        <label>Sites</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>